--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,17 +13,46 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/laddan"
+                android:layout_margin="10dp"
+                android:background="@color/green"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:background="@color/white"
+                    android:layout_margin="1dp"
+                    android:id="@+id/eng"
+                    android:padding="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Eng"
+                    android:textColor="@color/green"
+                    />
+                <TextView
+                    android:background="@color/white"
+                    android:layout_margin="1dp"
+                    android:id="@+id/arab"
+                    android:padding="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="عربى"
+                    android:textColor="@color/green"
+                    />
+            </LinearLayout>
+
 
             <TextView
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/summervibes"
-                android:text="Sign Up"
+                android:text="@string/sign_up"
                 android:layout_gravity="center"
                 android:textSize="35dp"
                 android:textColor="@color/black"
@@ -102,9 +131,9 @@
                 android:layout_width="match_parent"
                 android:padding="@dimen/space_10"
                 android:textSize="14sp"
-                android:drawableLeft="@drawable/person"
+                android:drawableStart="@drawable/person"
                 android:drawablePadding="@dimen/space_10"
-                android:hint="Name"
+                android:hint="@string/uname"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg2"
                 android:ems="10"
@@ -150,9 +179,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/space_10"
-                android:drawableLeft="@drawable/email"
+                android:drawableStart="@drawable/email"
                 android:drawablePadding="@dimen/space_10"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:textSize="14sp"
                 android:background="@drawable/bg2"
                 android:ems="10"
@@ -199,8 +228,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg2"
                 android:padding="@dimen/space_10"
-                android:drawableLeft="@drawable/phone"
-                android:hint="Phone"
+                android:drawableStart="@drawable/phone"
+                android:hint="@string/uphone"
                 android:drawablePadding="@dimen/space_10"
                 android:ems="10"
                 android:inputType="phone"
@@ -276,9 +305,8 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/space_10"
                 android:drawableStart="@drawable/password"
-                android:drawableLeft="@drawable/password"
                 android:drawablePadding="@dimen/space_10"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:background="@drawable/bg2"
                 android:inputType="textPassword"
                 android:maxLength="10"
@@ -300,9 +328,9 @@
                     android:layout_width="match_parent"
                     android:padding="@dimen/space_10"
                     android:textSize="14sp"
-                    android:drawableLeft="@drawable/referal"
+                    android:drawableStart="@drawable/referal"
                     android:drawablePadding="@dimen/space_10"
-                    android:hint="Referal Code"
+                    android:hint="@string/urefrel"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg2"
                     android:ems="10"
