--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -6,7 +6,9 @@
     xmlns:shimmer="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
-    <RelativeLayout
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:layout_gravity="bottom"
@@ -15,7 +17,8 @@
 
         <LinearLayout
             android:id="@+id/search_layout"
-            android:layout_width="300dp"
+            android:layout_width="0dp"
+            android:layout_weight="70"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="8dp"
@@ -25,7 +28,6 @@
             android:background="@drawable/back_border"
             android:orientation="horizontal">
 
-
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,6 +36,7 @@
                 android:gravity="center_vertical">
 
                 <ImageView
+                    android:layout_centerVertical="true"
                     android:id="@+id/lens"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -52,15 +55,20 @@
                     android:textSize="12sp" />
             </RelativeLayout>
         </LinearLayout>
-        <ImageView
-            android:layout_width="wrap_content"
+
+        <TextView
+            android:text="J6"
+            android:layout_gravity="center"
+            android:fontFamily="@font/bold"
+            android:layout_width="0dp"
+            android:layout_weight="10"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_toRightOf="@+id/search_layout"
-            android:background="@drawable/icon2"/>
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            />
 
 
-    </RelativeLayout>
+    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,7 +96,8 @@
                 <com.daimajia.slider.library.SliderLayout
                     android:id="@+id/relative_banner"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    >
                 </com.daimajia.slider.library.SliderLayout>
             </LinearLayout>
 
@@ -112,6 +121,26 @@
 
                 </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_view_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                shimmer:duration="500">
+
+                <!-- Adding 7 rows of placeholders -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <include layout="@layout/data_holder" />
+                    <include layout="@layout/data_holder" />
+                    <include layout="@layout/data_holder" />
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -137,30 +166,6 @@
 
 
                 </LinearLayout>
-                <com.facebook.shimmer.ShimmerFrameLayout
-                    android:id="@+id/shimmer_view_container"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:orientation="vertical"
-
-                    shimmer:duration="500">
-
-                    <!-- Adding 7 rows of placeholders -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <include layout="@layout/data_holder" />
-                        <include layout="@layout/data_holder" />
-                        <include layout="@layout/data_holder" />
-
-                    </LinearLayout>
-
-                </com.facebook.shimmer.ShimmerFrameLayout>
-
             </LinearLayout>
             </LinearLayout>
 
