--- a/app/src/main/res/layout/data_holder1.xml
+++ b/app/src/main/res/layout/data_holder1.xml
@@ -2,22 +2,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
-    android:layout_marginLeft="10dp"
+    android:layout_marginTop="12dp"
     >
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        >
     <View
         android:id="@+id/thumbnail"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="100dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:background="@color/gray" />
     <View
     android:id="@+id/thumbnail1"
-    android:layout_width="100dp"
-    android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="100dp"
     android:layout_toRightOf="@id/thumbnail"
     android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
@@ -25,13 +30,16 @@
     android:background="@color/gray" />
     <View
         android:id="@+id/thumbnail2"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="100dp"
         android:layout_toRightOf="@id/thumbnail1"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:background="@color/gray" />
+
+    </LinearLayout>
 
 
 
