--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorlayout"
@@ -24,18 +24,14 @@
             app:titleTextAppearance="@style/RobotoBoldTextAppearance"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
-
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
 <!--    <include layout="@layout/content_main" />-->
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
@@ -48,45 +44,60 @@
 
         </FrameLayout>
 
-
         <LinearLayout
         android:id="@+id/ll"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:weightSum="100"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@color/colorPrimary"
         >
         <LinearLayout
+            android:id="@+id/bot_store"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_weight="20"
             >
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:drawableTop="@drawable/ic_nav_home"
-            android:text="Store"
-            android:id="@+id/bot_store"
+            android:id="@+id/home_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:textColor="@color/white"
+            android:background="@drawable/ic_nav_home"
             android:textAlignment="center"
             android:layout_gravity="center"
             />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Store"
+
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_weight="20"
+
+            android:id="@+id/bot_categories"
             >
             <TextView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:textColor="@color/white"
+                android:background="@drawable/category"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                />
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="bottom"
-                android:id="@+id/bot_categories"
-                android:drawableTop="@drawable/category"
+                android:layout_height="wrap_content"
                 android:text="Categories"
                 android:textColor="@color/white"
                 android:textAlignment="center"
@@ -96,69 +107,99 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_weight="20"
+
+            android:id="@+id/bot_fav"
             >
+            <TextView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:textColor="@color/white"
+                android:background="@drawable/fav"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Favourite"
-                android:drawableTop="@drawable/fav"
                 android:textColor="@color/white"
-                android:id="@+id/bot_fav"
                 android:textAlignment="center"
-                android:layout_gravity="bottom"
+                android:layout_gravity="center"
                 />
         </LinearLayout>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
             android:layout_weight="20"
 
+            android:id="@+id/bot_cart"
             >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cart"
 
-                android:drawableTop="@drawable/cart1"
-                android:id="@+id/bot_cart"
-                android:textColor="@color/white"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginLeft="25dp"
-
-                />
             <TextView
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="2dp"
                 android:id="@+id/actionbar_notifcation_textview"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-
-                android:background="@drawable/xml_budget"
                 android:gravity="center"
+                android:textAlignment="center"
+                android:background="@drawable/xml_budget"
+                android:layout_gravity="center"
                 android:padding="1dp"
                 android:text="99"
                 android:textColor="#ffffff"
                 android:textSize="9sp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="20"
-            >
+
             <TextView
+                android:layout_centerHorizontal="true"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:textColor="@color/white"
+                android:background="@drawable/cart1"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                />
+            <TextView
+                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Account"
-                android:drawableTop="@drawable/ic_nav_profile"
-                android:id="@+id/bot_profile"
+                android:layout_height="wrap_content"
+                android:text="Cart"
                 android:textColor="@color/white"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
+
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="20"
+
+            android:id="@+id/bot_profile"
+            >
+            <TextView
+                android:layout_centerHorizontal="true"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:textColor="@color/white"
+                android:background="@drawable/ic_account_circle_black_24dp"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                />
+            <TextView
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Account"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                />
+
         </LinearLayout>
     </LinearLayout>
     </RelativeLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
