--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:id="@+id/laddan"
-        android:layout_margin="20dp"
+        android:layout_margin="40dp"
         android:background="@color/green"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,10 +42,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/my_orders"
-            android:text="My Orders"
+            android:text="@string/nav_order"
             android:layout_margin="10dp"
             android:textSize="18sp"
-            android:drawableLeft="@drawable/order"
+            android:drawableStart="@drawable/order"
             android:textColor="@color/black"
 
             />
@@ -54,10 +54,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/my_wallet"
             android:layout_below="@id/my_orders"
-            android:text="My Wallet"
+            android:text="@string/wall_am"
             android:textSize="18sp"
             android:layout_margin="10dp"
-            android:drawableLeft="@drawable/ic_account_balance_wallet_black_24dp"
+            android:drawableStart="@drawable/ic_account_balance_wallet_black_24dp"
             android:textColor="@color/black"
 
             />
@@ -66,10 +66,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:id="@+id/J6points"
-            android:text="J6 Points"
+            android:text="@string/rewards_points"
             android:layout_below="@id/my_wallet"
             android:textSize="18sp"
-            android:drawableLeft="@drawable/points"
+            android:drawableStart="@drawable/points"
             android:textColor="@color/black"
 
             />
@@ -78,10 +78,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:id="@+id/nav_my_profile"
-            android:text="Profile"
+            android:text="@string/btn_reg_update"
             android:layout_below="@id/J6points"
             android:textSize="18sp"
-            android:drawableLeft="@drawable/ic_nav_profile"
+            android:drawableStart="@drawable/ic_nav_profile"
             android:textColor="@color/black"
 
             />
@@ -90,11 +90,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:id="@+id/nav_logout"
-            android:text="Logout"
+            android:text="@string/nav_logout"
             android:layout_below="@id/nav_my_profile"
             android:textSize="18sp"
             android:visibility="gone"
-            android:drawableLeft="@drawable/ic_exit"
+            android:drawableStart="@drawable/ic_exit"
             android:textColor="@color/black"
 
             />
@@ -103,11 +103,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:id="@+id/nav_login"
-            android:text="Login"
+            android:text="@string/btn_login"
             android:visibility="gone"
             android:layout_below="@id/nav_logout"
             android:textSize="18sp"
-            android:drawableLeft="@drawable/ic_exit"
+            android:drawableStart="@drawable/ic_exit"
             android:textColor="@color/black"
 
             />
@@ -123,13 +123,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="3"
+            android:layout_marginTop="5dp"
             android:layout_below="@id/v1"
+            android:id="@+id/l1"
             >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rate App"
+                android:text="@string/rate"
                 android:id="@+id/rate"
                 android:textAlignment="center"
                 android:textSize="20sp"
@@ -140,7 +142,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Share App"
+                android:text="@string/nav_share"
                 android:id="@+id/share"
                 android:textSize="20sp"
                 android:textColor="@color/black"
@@ -151,7 +153,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rate App"
+                android:text="@string/feedback"
                 android:id="@+id/feedback"
                 android:textAlignment="center"
                 android:textSize="20sp"
@@ -161,6 +163,61 @@
                 />
 
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:id="@+id/v2"
+            android:layout_below="@id/l1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/nav_contact"
+            android:layout_below="@id/v2"
+            android:textSize="23sp"
+            android:layout_margin="10dp"
+            android:id="@+id/contact"
+            android:textColor="@color/black"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="4"
+            android:layout_below="@id/contact">
+            <TextView
+                android:layout_width="0dp"
+                android:id="@+id/facbook"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/facebook"
+                />
+
+            <TextView
+                android:id="@+id/whatsapp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/whatsapp" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:id="@+id/instagram"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/instagram"
+                />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:id="@+id/twitter"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/twitter"
+                />
+
+
+        </LinearLayout>
+
+
+
 
     </RelativeLayout>
 
