--- a/app/src/main/res/layout/dialog_product_detail.xml
+++ b/app/src/main/res/layout/dialog_product_detail.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/fav_product"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="3dp"
+        android:visibility="gone"
+        android:src="@drawable/heartf"
+        android:layout_alignParentRight="true"
+        android:layout_margin="15dp"
+        />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_product_detail_img"
@@ -13,13 +23,15 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/space_12"
         app:srcCompat="@drawable/icon"
+        android:layout_centerHorizontal="true"
         app:civ_border_color="@android:color/transparent"
         app:civ_border_width="2dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/space_10">
+        android:padding="@dimen/space_10"
+        android:layout_below="@id/iv_product_detail_img">
 
         <Fonts.LatoBLack
             android:id="@+id/tv_product_detail_title"
@@ -114,4 +126,4 @@
             android:text="TextView"
             android:textColor="#000" />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
