--- a/app/src/main/res/layout/dialog_product_detail.xml
+++ b/app/src/main/res/layout/dialog_product_detail.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <ImageView
         android:id="@+id/fav_product"
         android:layout_width="40dp"
@@ -23,15 +22,13 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/space_12"
         app:srcCompat="@drawable/icon"
-        android:layout_centerHorizontal="true"
         app:civ_border_color="@android:color/transparent"
         app:civ_border_width="2dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/space_10"
-        android:layout_below="@id/iv_product_detail_img">
+        android:padding="@dimen/space_10">
 
         <Fonts.LatoBLack
             android:id="@+id/tv_product_detail_title"
@@ -99,6 +96,93 @@
                 android:textColor="@color/white" />
 
         </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:id="@+id/id1"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:orientation="vertical"
+    android:layout_alignParentStart="true"
+    android:layout_below="@+id/tv_product_detail_title"
+    android:layout_marginTop="@dimen/space_8"
+    android:layout_toLeftOf="@+id/linearLayout"
+    android:layout_toStartOf="@+id/linearLayout">
+    <Fonts.LatoBLack
+        android:id="@+id/tv_subcat_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#000"
+        android:textSize="@dimen/text_size_X_small" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_3"
+        android:layout_marginTop="2dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <Fonts.LatoBLack
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_cart_total"
+            android:textColor="#000"
+            android:textSize="@dimen/text_size_small" />
+
+        <Fonts.LatoBLack
+            android:id="@+id/tv_subcat_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" TextView"
+            android:textColor="#000"
+            android:textSize="@dimen/text_size_small" />
+        <Fonts.LatoBLack
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:text="@string/currency"
+            android:textColor="#000"
+            android:textSize="@dimen/text_size_small" />
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="130dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="@dimen/space_3"
+
+        android:layout_marginTop="@dimen/space_4"
+        android:background="@drawable/slider_shape"
+        android:gravity="center_vertical">
+
+        <Fonts.LatoBLack
+            android:id="@+id/text_rw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/space_3"
+            android:text="@string/rewards_points"
+            android:textColor="#000"
+            android:textSize="@dimen/text_size_small" />
+
+        <Fonts.LatoBLack
+
+            android:id="@+id/tv_reward_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignRight="@dimen/space_18"
+            android:text=""
+            android:textColor="#000"
+            android:textSize="@dimen/text_size_small" />
+
+
+    </RelativeLayout>
+
+
+</LinearLayout>
 
         <Fonts.LatoBLack
             android:id="@+id/textView11"
@@ -106,7 +190,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/tv_product_detail_title"
+            android:layout_below="@+id/id1"
             android:layout_marginTop="@dimen/space_8"
             android:layout_toLeftOf="@+id/linearLayout"
             android:layout_toStartOf="@+id/linearLayout"
@@ -126,4 +210,4 @@
             android:text="TextView"
             android:textColor="#000" />
     </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
