--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -58,6 +58,26 @@
             android:layout_height="match_parent"
             android:background="@color/black"
              />
+        <com.facebook.shimmer.ShimmerFrameLayout
+
+            android:id="@+id/shimmer_view_container1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            shimmer:duration="500"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <include layout="@layout/dataholder3" />
+                <include layout="@layout/dataholder3" />
+                <include layout="@layout/dataholder3" />
+                <include layout="@layout/dataholder3" />
+                <include layout="@layout/dataholder3" />
+            </LinearLayout>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rect"
