--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -34,11 +34,23 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:layout_marginBottom="2dp"
+        android:background="@color/green">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Product "
+            android:layout_centerVertical="true"
+            android:textColor="@color/white"/>
         <ImageView
+            android:id="@+id/imagefav"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/heartf"
+            android:src="@drawable/heartnfw"
+            android:visibility="gone"
             android:layout_alignParentEnd="true"/>
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
