--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     android:weightSum="3"
     android:orientation="vertical"
     tools:context="Fragment.Favourite">
@@ -29,9 +30,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:id="@+id/fav_prod"
             android:textAlignment="center"
             android:text="Favourite Products"
-            android:textSize="17sp"
+            android:textSize="12sp"
             android:textColor="@color/black"
             android:drawableTop="@drawable/fav_prod"/>
         <TextView
@@ -39,17 +41,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textAlignment="center"
+            android:id="@+id/fav_store"
             android:text="Favourite\n Stores"
-            android:textSize="17sp"
+            android:textSize="13sp"
             android:textColor="@color/black"
             android:drawableTop="@drawable/ic_nav_home"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:id="@+id/fav_category"
             android:textAlignment="center"
             android:text="Favourite Categories"
-            android:textSize="17sp"
+            android:textSize="13sp"
             android:textColor="@color/black"
             android:drawableTop="@drawable/category"/>
 
@@ -62,12 +66,49 @@
         android:layout_height="match_parent"
         android:id="@+id/v_fav"
         android:background="@color/green"/>
+            <com.facebook.shimmer.ShimmerFrameLayout
+
+                android:id="@+id/shimmer_view_container1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                shimmer:duration="500"
+                >
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <include layout="@layout/dataholder3" />
+                    <include layout="@layout/dataholder3" />
+                    <include layout="@layout/dataholder3" />
+                    <include layout="@layout/dataholder3" />
+                    <include layout="@layout/dataholder3" />
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2.3"
         android:layout_margin="5dp"
+
         android:id="@+id/rv_fav"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.3"
+                android:visibility="gone"
+                android:layout_margin="5dp"
+
+                android:id="@+id/rv_store"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.3"
+                android:visibility="gone"
+                android:layout_margin="5dp"
+                android:id="@+id/rv_cat"/>
+
 
 
         </LinearLayout>
