--- a/app/src/main/res/layout/dialog_product_detail.xml
+++ b/app/src/main/res/layout/dialog_product_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,10 +22,12 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/space_12"
         app:srcCompat="@drawable/icon"
+        android:layout_centerHorizontal="true"
         app:civ_border_color="@android:color/transparent"
         app:civ_border_width="2dp"/>
 
     <RelativeLayout
+        android:layout_below="@id/iv_product_detail_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/space_10">
@@ -210,4 +212,4 @@
             android:text="TextView"
             android:textColor="#000" />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
