--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -83,15 +83,27 @@
             android:textSize="18sp"
             android:drawableStart="@drawable/ic_nav_profile"
             android:textColor="@color/black"
-
             />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:id="@+id/top_selling"
+            android:text="@string/top_selling"
+            android:layout_below="@id/nav_my_profile"
+            android:textSize="18sp"
+            android:drawableStart="@drawable/ic_baseline_thumb_up_24"
+            android:textColor="@color/black"
+            />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:id="@+id/nav_logout"
             android:text="@string/nav_logout"
-            android:layout_below="@id/nav_my_profile"
+            android:layout_below="@id/top_selling"
             android:textSize="18sp"
             android:visibility="gone"
             android:drawableStart="@drawable/ic_exit"
