--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -32,6 +32,7 @@
 
 
     <RelativeLayout
+        android:id="@+id/tempy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
