--- a/app/src/main/res/layout/activity_payment_method.xml
+++ b/app/src/main/res/layout/activity_payment_method.xml
@@ -463,6 +463,20 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/nav_order_note"
+            android:textSize="15sp"
+            android:textColor="@color/black"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:hint="@string/nav_note"
+            android:id="@+id/extra_note"
+            android:textAlignment="textStart"
+
+            android:padding="5dp"/>
 
         <RelativeLayout
             android:id="@+id/confirm_order"
