--- a/app/src/main/res/layout/row_store.xml
+++ b/app/src/main/res/layout/row_store.xml
@@ -27,6 +27,16 @@
                 android:src="@drawable/icon"
                 />
 
+            <RatingBar
+                android:theme="@style/RatingBar"
+                android:layout_margin="3dp"
+                style="?android:attr/ratingBarStyleSmall"
+                android:numStars="5"
+                android:id="@+id/rating_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
             <TextView
                 android:fontFamily="@font/bold"
                 android:layout_marginTop="5dp"
@@ -35,7 +45,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-
                 android:text="Store Name"
                 android:textColor="@color/white"
                 android:padding="4dp"
