--- a/app/src/main/res/layout/fragment_deal.xml
+++ b/app/src/main/res/layout/fragment_deal.xml
@@ -3,12 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     xmlns:shimmer="http://schemas.android.com/tools"
-
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,6 +57,7 @@
 <!--    </RelativeLayout>-->
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_margin="5dp"
         android:id="@+id/rv_subcategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
