--- a/app/src/main/res/layout/row_deal_of_the_day.xml
+++ b/app/src/main/res/layout/row_deal_of_the_day.xml
@@ -9,7 +9,6 @@
     app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,12 +29,13 @@
                 android:orientation="horizontal">
 
                 <Fonts.LatoBLack
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="left"
-                    android:text="Start Time : "
+                    android:text="@string/start_time"
                     android:textColor="#837e7e"
                     android:textSize="8sp" />
 
@@ -46,7 +46,7 @@
                     android:gravity="center"
                     android:text="dd"
                     android:textColor="#000"
-                    android:textSize="10sp" />
+                    android:textSize="8sp" />
 
             </LinearLayout>
 
@@ -56,23 +56,15 @@
                 android:layout_weight="1">
 
                 <Fonts.LatoBLack
-                    android:layout_centerVertical="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="End Time : "
-                    android:layout_toLeftOf="@id/end_time"
-                    android:textColor="#837e7e"
-                    android:textSize="8sp" />
-
-                <Fonts.LatoBLack
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="5dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
                     android:id="@+id/end_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="dd"
                     android:textColor="#000"
-                    android:textSize="10sp" />
+                    android:textSize="8sp" />
 
             </RelativeLayout>
 
@@ -165,7 +157,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="right"
                         android:paddingRight="@dimen/space_8"
-                        android:text="Offer :"
+                        android:text="@string/offer"
                         android:textColor="@color/color_1"
                         android:textSize="16sp"
                         />
