--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -24,7 +24,7 @@
             />
         <TextView
             android:padding="10dp"
-            android:textColor="#ff69b4"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:textAlignment="center"
             android:layout_height="wrap_content"
